; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/extr_df-problems.c_df_ur_get_bb_info.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/extr_df-problems.c_df_ur_get_bb_info.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.df_ur_bb_info = type { i32 }
%struct.dataflow = type { i64* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.df_ur_bb_info* @df_ur_get_bb_info(%struct.dataflow* %0, i32 %1) #0 {
  %3 = alloca %struct.dataflow*, align 8
  %4 = alloca i32, align 4
  store %struct.dataflow* %0, %struct.dataflow** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.dataflow*, %struct.dataflow** %3, align 8
  %6 = getelementptr inbounds %struct.dataflow, %struct.dataflow* %5, i32 0, i32 0
  %7 = load i64*, i64** %6, align 8
  %8 = load i32, i32* %4, align 4
  %9 = zext i32 %8 to i64
  %10 = getelementptr inbounds i64, i64* %7, i64 %9
  %11 = load i64, i64* %10, align 8
  %12 = inttoptr i64 %11 to %struct.df_ur_bb_info*
  ret %struct.df_ur_bb_info* %12
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
